updated font color

--- a/src/components/CharacterLists.css
+++ b/src/components/CharacterLists.css
@@ -30,6 +30,7 @@
     margin-top: 8px;
     font-size: 1.1em;
     padding: 0 10px;
+    color: red;
 }
 body{
     background-color: rgb(139, 134, 134);
